// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`line tests Update1 1`] = `
FigureElementPrimitive {
  "afterDrawCallback": null,
  "angleToDraw": -1,
  "anim": null,
  "animationFinishedCallback": [Function],
  "animations": null,
  "beforeDrawCallback": null,
  "border": "draw",
  "cancelSetTransform": false,
  "cannotTouchHole": false,
  "color": Array [
    1,
    0,
    0,
    0.6,
  ],
  "copyTransforms": Array [],
  "custom": Object {
    "options": Object {
      "angle": 0,
      "arrow": null,
      "border": undefined,
      "close": false,
      "color": Array [
        1,
        0,
        0,
        0.6,
      ],
      "cornerLength": 0.1,
      "cornerSides": 10,
      "cornerSize": 0.01,
      "cornerStyle": "auto",
      "cornersOnly": false,
      "dash": Array [],
      "drawBorder": "line",
      "drawBorderBuffer": 0.05,
      "holeBorder": Array [
        Array [],
      ],
      "length": 0.5,
      "lineNum": 2,
      "linePrimitives": false,
      "minAutoCornerAngle": 0.4487989505128276,
      "p1": Array [
        0,
        0,
      ],
      "p2": Array [
        0.3,
        0,
      ],
      "points": Array [
        Point {
          "_type": "point",
          "x": 0,
          "y": 0,
        },
        Point {
          "_type": "point",
          "x": 0.3,
          "y": 0,
        },
      ],
      "position": Array [
        -4,
        3.5,
      ],
      "touchBorder": "buffer",
      "transform": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          1,
          0,
          -4,
          0,
          1,
          3.5,
          0,
          0,
          1,
        ],
        "name": "line",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "line",
            "x": 1,
            "y": 1,
          },
          Rotation {
            "name": "line",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "line",
            "x": -4,
            "y": 3.5,
          },
        ],
      },
      "width": 0.05,
      "widthIs": "mid",
    },
    "setupLine": [Function],
    "updateGeneric": [Function],
    "updatePoints": [Function],
    "updatePolyline": [Function],
  },
  "defaultColor": Array [
    1,
    0,
    0,
    0.6,
  ],
  "dependantTransform": false,
  "dimColor": Array [
    0.5,
    0.5,
    0.5,
    1,
  ],
  "drawBorder": Array [
    Array [
      Point {
        "_type": "point",
        "x": 1.5308084989341916e-18,
        "y": -0.025,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": -0.025,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": 0.025,
      },
      Point {
        "_type": "point",
        "x": 1.5308084989341916e-18,
        "y": 0.025,
      },
    ],
  ],
  "drawBorderBuffer": Array [
    Array [
      Point {
        "_type": "point",
        "x": -0.049999999999999996,
        "y": -0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 4.592425496802575e-18,
        "y": -0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": -0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 0.35000000000000003,
        "y": -0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 0.35000000000000003,
        "y": 0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": 0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 4.592425496802575e-18,
        "y": 0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": -0.049999999999999996,
        "y": 0.07500000000000001,
      },
    ],
  ],
  "drawPriority": 1,
  "drawRect": Array [],
  "drawTransforms": Array [],
  "drawingObject": VertexGeneric {
    "buffer": Array [
      undefined,
    ],
    "copy": Array [],
    "gl": Array [
      Object {
        "TRIANGLES": 1,
        "TRIANGLE_STRIP": 2,
        "activeTexture": [Function],
        "bindBuffer": [Function],
        "bindTexture": [Function],
        "blendFunc": [Function],
        "bufferData": [Function],
        "clear": [Function],
        "clearColor": [Function],
        "createBuffer": [Function],
        "createTexture": [Function],
        "deleteBuffer": [Function],
        "drawArrays": [Function],
        "enableVertexAttribArray": [Function],
        "pixelStorei": [Function],
        "texImage2D": [Function],
        "uniform1f": [Function],
        "uniform1i": [Function],
        "uniform4f": [Function],
        "uniformMatrix3fv": [MockFunction],
        "vertexAttribPointer": [Function],
      },
    ],
    "glPrimitive": 1,
    "location": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
    },
    "numPoints": 6,
    "points": Array [
      1.5308084989341916e-18,
      0.025,
      0.3,
      0.025,
      1.5308084989341916e-18,
      -0.025,
      1.5308084989341916e-18,
      -0.025,
      0.3,
      0.025,
      0.3,
      -0.025,
    ],
    "programIndex": Array [
      undefined,
    ],
    "state": "loaded",
    "texture": null,
    "type": "vertexPrimitive",
    "vertices": Array [
      Point {
        "_type": "point",
        "x": 1.5308084989341916e-18,
        "y": 0.025,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": 0.025,
      },
      Point {
        "_type": "point",
        "x": 1.5308084989341916e-18,
        "y": -0.025,
      },
      Point {
        "_type": "point",
        "x": 1.5308084989341916e-18,
        "y": -0.025,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": 0.025,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": -0.025,
      },
    ],
    "webgl": Array [
      Object {
        "addTexture": [Function],
        "getProgram": [Function],
        "gl": Object {
          "TRIANGLES": 1,
          "TRIANGLE_STRIP": 2,
          "activeTexture": [Function],
          "bindBuffer": [Function],
          "bindTexture": [Function],
          "blendFunc": [Function],
          "bufferData": [Function],
          "clear": [Function],
          "clearColor": [Function],
          "createBuffer": [Function],
          "createTexture": [Function],
          "deleteBuffer": [Function],
          "drawArrays": [Function],
          "enableVertexAttribArray": [Function],
          "pixelStorei": [Function],
          "texImage2D": [Function],
          "uniform1f": [Function],
          "uniform1i": [Function],
          "uniform4f": [Function],
          "uniformMatrix3fv": [MockFunction],
          "vertexAttribPointer": [Function],
        },
        "lastUsedProgram": null,
        "locations": Object {
          "a_position": "",
        },
        "programs": Array [],
        "resize": [Function],
        "textures": Object {},
        "useProgram": [Function],
      },
    ],
    "z": 0,
  },
  "figure": null,
  "figureLimits": Rect {
    "bottom": -1,
    "height": 2,
    "left": -1,
    "right": 1,
    "top": 1,
    "width": 2,
  },
  "fnMap": FunctionMap {
    "global": GlobalFunctionMap {
      "map": Object {},
    },
    "map": Object {
      "_elementPulseSettingsTransformMethod": Object {
        "fn": [Function],
      },
      "tools.math.easeinout": Object {
        "fn": [Function],
      },
      "tools.math.linear": Object {
        "fn": [Function],
      },
      "tools.math.sinusoid": Object {
        "fn": [Function],
      },
      "tools.math.sinusoidAbs": Object {
        "fn": [Function],
      },
      "tools.math.triangle": Object {
        "fn": [Function],
      },
    },
  },
  "frozenPulseTransforms": Array [],
  "hasTouchableElements": false,
  "holeBorder": Array [
    Array [],
  ],
  "interactiveLocation": Point {
    "_type": "point",
    "x": 0,
    "y": 0,
  },
  "internalSetTransformCallback": null,
  "isInteractive": undefined,
  "isMovable": false,
  "isRenderedAsImage": false,
  "isShown": true,
  "isTouchable": true,
  "lastDrawElementTransformPosition": Object {
    "elementCount": 3,
    "parentCount": 5,
  },
  "lastDrawOpacity": 1,
  "lastDrawPulseTransform": Transform {
    "_type": "transform",
    "index": 3,
    "mat": Array [
      1,
      0,
      -4,
      0,
      1,
      3.5,
      0,
      0,
      1,
    ],
    "name": "line",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "line",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "line",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "line",
        "x": -4,
        "y": 3.5,
      },
    ],
  },
  "lastDrawTime": 0,
  "lastDrawTransform": Transform {
    "_type": "transform",
    "index": 0,
    "mat": Array [
      1,
      0,
      -4,
      0,
      1,
      3.5,
      0,
      0,
      1,
    ],
    "name": "Figure",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "line",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "line",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "line",
        "x": -4,
        "y": 3.5,
      },
      Scale {
        "_type": "point",
        "name": "collection",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "collection",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "collection",
        "x": 0,
        "y": 0,
      },
      Scale {
        "_type": "point",
        "name": "Figure",
        "x": 1,
        "y": 1,
      },
      Translation {
        "_type": "point",
        "name": "Figure",
        "x": 0,
        "y": 0,
      },
    ],
  },
  "lengthToDraw": -1,
  "move": Object {
    "bounds": TransformBounds {
      "boundary": Array [
        null,
        null,
        null,
      ],
      "bounds": "inside",
      "order": Array [
        "s",
        "r",
        "t",
      ],
      "precision": 8,
    },
    "canBeMovedAfterLosingTouch": true,
    "element": null,
    "freely": Object {
      "bounceLoss": 0.5,
      "callback": null,
      "deceleration": 5,
      "zeroVelocityThreshold": 0.0001,
    },
    "maxVelocity": 5,
    "sizeInBounds": false,
    "transformClip": null,
    "type": "translation",
  },
  "name": "Update1",
  "onAdd": null,
  "onClick": [Function],
  "opacity": 1,
  "parent": null,
  "parentTransform": Transform {
    "_type": "transform",
    "index": 0,
    "mat": Array [
      1,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      1,
    ],
    "name": "",
    "order": Array [],
  },
  "pointsDefinition": Object {},
  "pointsToDraw": -1,
  "pulseDefault": Object {
    "angle": 0,
    "centerOn": "this",
    "done": null,
    "duration": 1,
    "frequency": 0,
    "num": 1,
    "progression": "sinusoid",
    "rotation": null,
    "scale": 2,
    "space": "figure",
    "translation": null,
    "when": "syncNow",
    "xAlign": "center",
    "yAlign": "middle",
  },
  "pulseSettings": Object {
    "A": 1,
    "B": 0.5,
    "C": 0,
    "allowFreezeOnStop": false,
    "callback": [Function],
    "delta": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
    },
    "frequency": 0.5,
    "num": 1,
    "progression": "tools.math.sinusoid",
    "time": 1,
    "transformMethod": "_elementPulseSettingsTransformMethod",
    "type": "scale",
  },
  "pulseTransforms": Array [],
  "recorder": null,
  "renderedOnNextDraw": false,
  "scenarios": Object {},
  "setPointsFromDefinition": null,
  "setTransformCallback": null,
  "state": Object {
    "isBeingMoved": false,
    "isMovingFreely": false,
    "isPulsing": false,
    "movement": Object {
      "previousTime": null,
      "previousTransform": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          1,
          0,
          -4,
          0,
          1,
          3.5,
          0,
          0,
          1,
        ],
        "name": "line",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "line",
            "x": 1,
            "y": 1,
          },
          Rotation {
            "name": "line",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "line",
            "x": -4,
            "y": 3.5,
          },
        ],
      },
      "velocity": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
        ],
        "name": "line",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "line",
            "x": 0,
            "y": 0,
          },
          Rotation {
            "name": "line",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "line",
            "x": 0,
            "y": 0,
          },
        ],
      },
    },
    "preparingToStop": false,
    "pulse": Object {
      "startTime": null,
    },
  },
  "stateProperties": Array [],
  "subscriptions": SubscriptionManager {
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": Object {},
      },
      "map": Object {
        "_elementPulseSettingsTransformMethod": Object {
          "fn": [Function],
        },
        "tools.math.easeinout": Object {
          "fn": [Function],
        },
        "tools.math.linear": Object {
          "fn": [Function],
        },
        "tools.math.sinusoid": Object {
          "fn": [Function],
        },
        "tools.math.sinusoidAbs": Object {
          "fn": [Function],
        },
        "tools.math.triangle": Object {
          "fn": [Function],
        },
      },
    },
    "subscriptions": Object {},
  },
  "tieToHTML": Object {
    "element": null,
    "scale": "fit",
    "updateOnResize": true,
    "window": Rect {
      "bottom": -1,
      "height": 2,
      "left": -1,
      "right": 1,
      "top": 1,
      "width": 2,
    },
  },
  "touchBorder": "buffer",
  "transform": Transform {
    "_type": "transform",
    "index": 3,
    "mat": Array [
      1,
      0,
      -4,
      0,
      1,
      3.5,
      0,
      0,
      1,
    ],
    "name": "line",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "line",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "line",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "line",
        "x": -4,
        "y": 3.5,
      },
    ],
  },
  "type": "primitive",
  "uid": "",
  "unrenderNextDraw": false,
}
`;

exports[`line tests definition-length 1`] = `
FigureElementPrimitive {
  "afterDrawCallback": null,
  "angleToDraw": -1,
  "anim": null,
  "animationFinishedCallback": [Function],
  "animations": null,
  "beforeDrawCallback": null,
  "border": "draw",
  "cancelSetTransform": false,
  "cannotTouchHole": false,
  "color": Array [
    1,
    0,
    0,
    0.6,
  ],
  "copyTransforms": Array [],
  "custom": Object {
    "options": Object {
      "angle": 0.7853981633974483,
      "arrow": null,
      "border": undefined,
      "close": false,
      "color": Array [
        1,
        0,
        0,
        0.6,
      ],
      "cornerLength": 0.1,
      "cornerSides": 10,
      "cornerSize": 0.01,
      "cornerStyle": "auto",
      "cornersOnly": false,
      "dash": Array [],
      "drawBorder": "line",
      "drawBorderBuffer": 0.05,
      "holeBorder": Array [
        Array [],
      ],
      "length": 0.3,
      "lineNum": 2,
      "linePrimitives": false,
      "minAutoCornerAngle": 0.4487989505128276,
      "p1": Array [
        0,
        0,
      ],
      "p2": Array [
        0.3,
        0,
      ],
      "points": Array [
        Point {
          "_type": "point",
          "x": 0,
          "y": 0,
        },
        Point {
          "_type": "point",
          "x": 0.3,
          "y": 0,
        },
      ],
      "position": Array [
        -2,
        3.5,
      ],
      "touchBorder": "buffer",
      "transform": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          1,
          0,
          -2,
          0,
          1,
          3.5,
          0,
          0,
          1,
        ],
        "name": "line",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "line",
            "x": 1,
            "y": 1,
          },
          Rotation {
            "name": "line",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "line",
            "x": -2,
            "y": 3.5,
          },
        ],
      },
      "width": 0.05,
      "widthIs": "mid",
    },
    "setupLine": [Function],
    "updateGeneric": [Function],
    "updatePoints": [Function],
    "updatePolyline": [Function],
  },
  "defaultColor": Array [
    1,
    0,
    0,
    0.6,
  ],
  "dependantTransform": false,
  "dimColor": Array [
    0.5,
    0.5,
    0.5,
    1,
  ],
  "drawBorder": Array [
    Array [
      Point {
        "_type": "point",
        "x": 1.5308084989341916e-18,
        "y": -0.025,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": -0.025,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": 0.025,
      },
      Point {
        "_type": "point",
        "x": 1.5308084989341916e-18,
        "y": 0.025,
      },
    ],
  ],
  "drawBorderBuffer": Array [
    Array [
      Point {
        "_type": "point",
        "x": -0.049999999999999996,
        "y": -0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 4.592425496802575e-18,
        "y": -0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": -0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 0.35000000000000003,
        "y": -0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 0.35000000000000003,
        "y": 0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": 0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": 4.592425496802575e-18,
        "y": 0.07500000000000001,
      },
      Point {
        "_type": "point",
        "x": -0.049999999999999996,
        "y": 0.07500000000000001,
      },
    ],
  ],
  "drawPriority": 1,
  "drawRect": Array [],
  "drawTransforms": Array [],
  "drawingObject": VertexGeneric {
    "buffer": Array [
      undefined,
    ],
    "copy": Array [],
    "gl": Array [
      Object {
        "TRIANGLES": 1,
        "TRIANGLE_STRIP": 2,
        "activeTexture": [Function],
        "bindBuffer": [Function],
        "bindTexture": [Function],
        "blendFunc": [Function],
        "bufferData": [Function],
        "clear": [Function],
        "clearColor": [Function],
        "createBuffer": [Function],
        "createTexture": [Function],
        "deleteBuffer": [Function],
        "drawArrays": [Function],
        "enableVertexAttribArray": [Function],
        "pixelStorei": [Function],
        "texImage2D": [Function],
        "uniform1f": [Function],
        "uniform1i": [Function],
        "uniform4f": [Function],
        "uniformMatrix3fv": [MockFunction],
        "vertexAttribPointer": [Function],
      },
    ],
    "glPrimitive": 1,
    "location": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
    },
    "numPoints": 6,
    "points": Array [
      1.5308084989341916e-18,
      0.025,
      0.3,
      0.025,
      1.5308084989341916e-18,
      -0.025,
      1.5308084989341916e-18,
      -0.025,
      0.3,
      0.025,
      0.3,
      -0.025,
    ],
    "programIndex": Array [
      undefined,
    ],
    "state": "loaded",
    "texture": null,
    "type": "vertexPrimitive",
    "vertices": Array [
      Point {
        "_type": "point",
        "x": 1.5308084989341916e-18,
        "y": 0.025,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": 0.025,
      },
      Point {
        "_type": "point",
        "x": 1.5308084989341916e-18,
        "y": -0.025,
      },
      Point {
        "_type": "point",
        "x": 1.5308084989341916e-18,
        "y": -0.025,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": 0.025,
      },
      Point {
        "_type": "point",
        "x": 0.3,
        "y": -0.025,
      },
    ],
    "webgl": Array [
      Object {
        "addTexture": [Function],
        "getProgram": [Function],
        "gl": Object {
          "TRIANGLES": 1,
          "TRIANGLE_STRIP": 2,
          "activeTexture": [Function],
          "bindBuffer": [Function],
          "bindTexture": [Function],
          "blendFunc": [Function],
          "bufferData": [Function],
          "clear": [Function],
          "clearColor": [Function],
          "createBuffer": [Function],
          "createTexture": [Function],
          "deleteBuffer": [Function],
          "drawArrays": [Function],
          "enableVertexAttribArray": [Function],
          "pixelStorei": [Function],
          "texImage2D": [Function],
          "uniform1f": [Function],
          "uniform1i": [Function],
          "uniform4f": [Function],
          "uniformMatrix3fv": [MockFunction],
          "vertexAttribPointer": [Function],
        },
        "lastUsedProgram": null,
        "locations": Object {
          "a_position": "",
        },
        "programs": Array [],
        "resize": [Function],
        "textures": Object {},
        "useProgram": [Function],
      },
    ],
    "z": 0,
  },
  "figure": null,
  "figureLimits": Rect {
    "bottom": -1,
    "height": 2,
    "left": -1,
    "right": 1,
    "top": 1,
    "width": 2,
  },
  "fnMap": FunctionMap {
    "global": GlobalFunctionMap {
      "map": Object {},
    },
    "map": Object {
      "_elementPulseSettingsTransformMethod": Object {
        "fn": [Function],
      },
      "tools.math.easeinout": Object {
        "fn": [Function],
      },
      "tools.math.linear": Object {
        "fn": [Function],
      },
      "tools.math.sinusoid": Object {
        "fn": [Function],
      },
      "tools.math.sinusoidAbs": Object {
        "fn": [Function],
      },
      "tools.math.triangle": Object {
        "fn": [Function],
      },
    },
  },
  "frozenPulseTransforms": Array [],
  "hasTouchableElements": false,
  "holeBorder": Array [
    Array [],
  ],
  "interactiveLocation": Point {
    "_type": "point",
    "x": 0,
    "y": 0,
  },
  "internalSetTransformCallback": null,
  "isInteractive": undefined,
  "isMovable": false,
  "isRenderedAsImage": false,
  "isShown": true,
  "isTouchable": true,
  "lastDrawElementTransformPosition": Object {
    "elementCount": 3,
    "parentCount": 5,
  },
  "lastDrawOpacity": 1,
  "lastDrawPulseTransform": Transform {
    "_type": "transform",
    "index": 3,
    "mat": Array [
      1,
      0,
      -2,
      0,
      1,
      3.5,
      0,
      0,
      1,
    ],
    "name": "line",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "line",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "line",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "line",
        "x": -2,
        "y": 3.5,
      },
    ],
  },
  "lastDrawTime": 0,
  "lastDrawTransform": Transform {
    "_type": "transform",
    "index": 0,
    "mat": Array [
      1,
      0,
      -2,
      0,
      1,
      3.5,
      0,
      0,
      1,
    ],
    "name": "Figure",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "line",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "line",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "line",
        "x": -2,
        "y": 3.5,
      },
      Scale {
        "_type": "point",
        "name": "collection",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "collection",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "collection",
        "x": 0,
        "y": 0,
      },
      Scale {
        "_type": "point",
        "name": "Figure",
        "x": 1,
        "y": 1,
      },
      Translation {
        "_type": "point",
        "name": "Figure",
        "x": 0,
        "y": 0,
      },
    ],
  },
  "lengthToDraw": -1,
  "move": Object {
    "bounds": TransformBounds {
      "boundary": Array [
        null,
        null,
        null,
      ],
      "bounds": "inside",
      "order": Array [
        "s",
        "r",
        "t",
      ],
      "precision": 8,
    },
    "canBeMovedAfterLosingTouch": true,
    "element": null,
    "freely": Object {
      "bounceLoss": 0.5,
      "callback": null,
      "deceleration": 5,
      "zeroVelocityThreshold": 0.0001,
    },
    "maxVelocity": 5,
    "sizeInBounds": false,
    "transformClip": null,
    "type": "translation",
  },
  "name": "definition-length",
  "onAdd": null,
  "onClick": [Function],
  "opacity": 1,
  "parent": null,
  "parentTransform": Transform {
    "_type": "transform",
    "index": 0,
    "mat": Array [
      1,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      1,
    ],
    "name": "",
    "order": Array [],
  },
  "pointsDefinition": Object {},
  "pointsToDraw": -1,
  "pulseDefault": Object {
    "angle": 0,
    "centerOn": "this",
    "done": null,
    "duration": 1,
    "frequency": 0,
    "num": 1,
    "progression": "sinusoid",
    "rotation": null,
    "scale": 2,
    "space": "figure",
    "translation": null,
    "when": "syncNow",
    "xAlign": "center",
    "yAlign": "middle",
  },
  "pulseSettings": Object {
    "A": 1,
    "B": 0.5,
    "C": 0,
    "allowFreezeOnStop": false,
    "callback": [Function],
    "delta": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
    },
    "frequency": 0.5,
    "num": 1,
    "progression": "tools.math.sinusoid",
    "time": 1,
    "transformMethod": "_elementPulseSettingsTransformMethod",
    "type": "scale",
  },
  "pulseTransforms": Array [],
  "recorder": null,
  "renderedOnNextDraw": false,
  "scenarios": Object {},
  "setPointsFromDefinition": null,
  "setTransformCallback": null,
  "state": Object {
    "isBeingMoved": false,
    "isMovingFreely": false,
    "isPulsing": false,
    "movement": Object {
      "previousTime": null,
      "previousTransform": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          1,
          0,
          -2,
          0,
          1,
          3.5,
          0,
          0,
          1,
        ],
        "name": "line",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "line",
            "x": 1,
            "y": 1,
          },
          Rotation {
            "name": "line",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "line",
            "x": -2,
            "y": 3.5,
          },
        ],
      },
      "velocity": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
        ],
        "name": "line",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "line",
            "x": 0,
            "y": 0,
          },
          Rotation {
            "name": "line",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "line",
            "x": 0,
            "y": 0,
          },
        ],
      },
    },
    "preparingToStop": false,
    "pulse": Object {
      "startTime": null,
    },
  },
  "stateProperties": Array [],
  "subscriptions": SubscriptionManager {
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": Object {},
      },
      "map": Object {
        "_elementPulseSettingsTransformMethod": Object {
          "fn": [Function],
        },
        "tools.math.easeinout": Object {
          "fn": [Function],
        },
        "tools.math.linear": Object {
          "fn": [Function],
        },
        "tools.math.sinusoid": Object {
          "fn": [Function],
        },
        "tools.math.sinusoidAbs": Object {
          "fn": [Function],
        },
        "tools.math.triangle": Object {
          "fn": [Function],
        },
      },
    },
    "subscriptions": Object {},
  },
  "tieToHTML": Object {
    "element": null,
    "scale": "fit",
    "updateOnResize": true,
    "window": Rect {
      "bottom": -1,
      "height": 2,
      "left": -1,
      "right": 1,
      "top": 1,
      "width": 2,
    },
  },
  "touchBorder": "buffer",
  "transform": Transform {
    "_type": "transform",
    "index": 3,
    "mat": Array [
      1,
      0,
      -2,
      0,
      1,
      3.5,
      0,
      0,
      1,
    ],
    "name": "line",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "line",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "line",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "line",
        "x": -2,
        "y": 3.5,
      },
    ],
  },
  "type": "primitive",
  "uid": "",
  "unrenderNextDraw": false,
}
`;

exports[`line tests definition-points 1`] = `
FigureElementPrimitive {
  "afterDrawCallback": null,
  "angleToDraw": -1,
  "anim": null,
  "animationFinishedCallback": [Function],
  "animations": null,
  "beforeDrawCallback": null,
  "border": "draw",
  "cancelSetTransform": false,
  "cannotTouchHole": false,
  "color": Array [
    1,
    0,
    0,
    0.6,
  ],
  "copyTransforms": Array [],
  "custom": Object {
    "options": Object {
      "angle": 0,
      "arrow": null,
      "border": undefined,
      "close": false,
      "color": Array [
        1,
        0,
        0,
        0.6,
      ],
      "cornerLength": 0.1,
      "cornerSides": 10,
      "cornerSize": 0.01,
      "cornerStyle": "auto",
      "cornersOnly": false,
      "dash": Array [],
      "drawBorder": "line",
      "drawBorderBuffer": 0.05,
      "holeBorder": Array [
        Array [],
      ],
      "length": 0.5,
      "lineNum": 2,
      "linePrimitives": false,
      "minAutoCornerAngle": 0.4487989505128276,
      "p1": Array [
        0,
        0,
      ],
      "p2": Array [
        0.3,
        0.3,
      ],
      "points": Array [
        Point {
          "_type": "point",
          "x": 0,
          "y": 0,
        },
        Point {
          "_type": "point",
          "x": 0.3,
          "y": 0.3,
        },
      ],
      "position": Array [
        -3,
        3.5,
      ],
      "touchBorder": "buffer",
      "transform": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          1,
          0,
          -3,
          0,
          1,
          3.5,
          0,
          0,
          1,
        ],
        "name": "line",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "line",
            "x": 1,
            "y": 1,
          },
          Rotation {
            "name": "line",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "line",
            "x": -3,
            "y": 3.5,
          },
        ],
      },
      "width": 0.05,
      "widthIs": "mid",
    },
    "setupLine": [Function],
    "updateGeneric": [Function],
    "updatePoints": [Function],
    "updatePolyline": [Function],
  },
  "defaultColor": Array [
    1,
    0,
    0,
    0.6,
  ],
  "dependantTransform": false,
  "dimColor": Array [
    0.5,
    0.5,
    0.5,
    1,
  ],
  "drawBorder": Array [
    Array [
      Point {
        "_type": "point",
        "x": 0.01767766952966369,
        "y": -0.017677669529663688,
      },
      Point {
        "_type": "point",
        "x": 0.3176776695296637,
        "y": 0.2823223304703363,
      },
      Point {
        "_type": "point",
        "x": 0.2823223304703363,
        "y": 0.3176776695296637,
      },
      Point {
        "_type": "point",
        "x": -0.017677669529663688,
        "y": 0.01767766952966369,
      },
    ],
  ],
  "drawBorderBuffer": Array [
    Array [
      Point {
        "_type": "point",
        "x": 0.017677669529663688,
        "y": -0.08838834764831846,
      },
      Point {
        "_type": "point",
        "x": 0.05303300858899107,
        "y": -0.05303300858899108,
      },
      Point {
        "_type": "point",
        "x": 0.35303300858899106,
        "y": 0.24696699141100892,
      },
      Point {
        "_type": "point",
        "x": 0.3883883476483184,
        "y": 0.2823223304703362,
      },
      Point {
        "_type": "point",
        "x": 0.2823223304703364,
        "y": 0.3883883476483185,
      },
      Point {
        "_type": "point",
        "x": 0.24696699141100892,
        "y": 0.35303300858899106,
      },
      Point {
        "_type": "point",
        "x": -0.05303300858899107,
        "y": 0.05303300858899108,
      },
      Point {
        "_type": "point",
        "x": -0.08838834764831846,
        "y": 0.017677669529663702,
      },
    ],
  ],
  "drawPriority": 1,
  "drawRect": Array [],
  "drawTransforms": Array [],
  "drawingObject": VertexGeneric {
    "buffer": Array [
      undefined,
    ],
    "copy": Array [],
    "gl": Array [
      Object {
        "TRIANGLES": 1,
        "TRIANGLE_STRIP": 2,
        "activeTexture": [Function],
        "bindBuffer": [Function],
        "bindTexture": [Function],
        "blendFunc": [Function],
        "bufferData": [Function],
        "clear": [Function],
        "clearColor": [Function],
        "createBuffer": [Function],
        "createTexture": [Function],
        "deleteBuffer": [Function],
        "drawArrays": [Function],
        "enableVertexAttribArray": [Function],
        "pixelStorei": [Function],
        "texImage2D": [Function],
        "uniform1f": [Function],
        "uniform1i": [Function],
        "uniform4f": [Function],
        "uniformMatrix3fv": [MockFunction],
        "vertexAttribPointer": [Function],
      },
    ],
    "glPrimitive": 1,
    "location": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
    },
    "numPoints": 6,
    "points": Array [
      -0.017677669529663688,
      0.01767766952966369,
      0.2823223304703363,
      0.3176776695296637,
      0.01767766952966369,
      -0.017677669529663688,
      0.01767766952966369,
      -0.017677669529663688,
      0.2823223304703363,
      0.3176776695296637,
      0.3176776695296637,
      0.2823223304703363,
    ],
    "programIndex": Array [
      undefined,
    ],
    "state": "loaded",
    "texture": null,
    "type": "vertexPrimitive",
    "vertices": Array [
      Point {
        "_type": "point",
        "x": -0.017677669529663688,
        "y": 0.01767766952966369,
      },
      Point {
        "_type": "point",
        "x": 0.2823223304703363,
        "y": 0.3176776695296637,
      },
      Point {
        "_type": "point",
        "x": 0.01767766952966369,
        "y": -0.017677669529663688,
      },
      Point {
        "_type": "point",
        "x": 0.01767766952966369,
        "y": -0.017677669529663688,
      },
      Point {
        "_type": "point",
        "x": 0.2823223304703363,
        "y": 0.3176776695296637,
      },
      Point {
        "_type": "point",
        "x": 0.3176776695296637,
        "y": 0.2823223304703363,
      },
    ],
    "webgl": Array [
      Object {
        "addTexture": [Function],
        "getProgram": [Function],
        "gl": Object {
          "TRIANGLES": 1,
          "TRIANGLE_STRIP": 2,
          "activeTexture": [Function],
          "bindBuffer": [Function],
          "bindTexture": [Function],
          "blendFunc": [Function],
          "bufferData": [Function],
          "clear": [Function],
          "clearColor": [Function],
          "createBuffer": [Function],
          "createTexture": [Function],
          "deleteBuffer": [Function],
          "drawArrays": [Function],
          "enableVertexAttribArray": [Function],
          "pixelStorei": [Function],
          "texImage2D": [Function],
          "uniform1f": [Function],
          "uniform1i": [Function],
          "uniform4f": [Function],
          "uniformMatrix3fv": [MockFunction],
          "vertexAttribPointer": [Function],
        },
        "lastUsedProgram": null,
        "locations": Object {
          "a_position": "",
        },
        "programs": Array [],
        "resize": [Function],
        "textures": Object {},
        "useProgram": [Function],
      },
    ],
    "z": 0,
  },
  "figure": null,
  "figureLimits": Rect {
    "bottom": -1,
    "height": 2,
    "left": -1,
    "right": 1,
    "top": 1,
    "width": 2,
  },
  "fnMap": FunctionMap {
    "global": GlobalFunctionMap {
      "map": Object {},
    },
    "map": Object {
      "_elementPulseSettingsTransformMethod": Object {
        "fn": [Function],
      },
      "tools.math.easeinout": Object {
        "fn": [Function],
      },
      "tools.math.linear": Object {
        "fn": [Function],
      },
      "tools.math.sinusoid": Object {
        "fn": [Function],
      },
      "tools.math.sinusoidAbs": Object {
        "fn": [Function],
      },
      "tools.math.triangle": Object {
        "fn": [Function],
      },
    },
  },
  "frozenPulseTransforms": Array [],
  "hasTouchableElements": false,
  "holeBorder": Array [
    Array [],
  ],
  "interactiveLocation": Point {
    "_type": "point",
    "x": 0,
    "y": 0,
  },
  "internalSetTransformCallback": null,
  "isInteractive": undefined,
  "isMovable": false,
  "isRenderedAsImage": false,
  "isShown": true,
  "isTouchable": true,
  "lastDrawElementTransformPosition": Object {
    "elementCount": 3,
    "parentCount": 5,
  },
  "lastDrawOpacity": 1,
  "lastDrawPulseTransform": Transform {
    "_type": "transform",
    "index": 3,
    "mat": Array [
      1,
      0,
      -3,
      0,
      1,
      3.5,
      0,
      0,
      1,
    ],
    "name": "line",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "line",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "line",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "line",
        "x": -3,
        "y": 3.5,
      },
    ],
  },
  "lastDrawTime": 0,
  "lastDrawTransform": Transform {
    "_type": "transform",
    "index": 0,
    "mat": Array [
      1,
      0,
      -3,
      0,
      1,
      3.5,
      0,
      0,
      1,
    ],
    "name": "Figure",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "line",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "line",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "line",
        "x": -3,
        "y": 3.5,
      },
      Scale {
        "_type": "point",
        "name": "collection",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "collection",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "collection",
        "x": 0,
        "y": 0,
      },
      Scale {
        "_type": "point",
        "name": "Figure",
        "x": 1,
        "y": 1,
      },
      Translation {
        "_type": "point",
        "name": "Figure",
        "x": 0,
        "y": 0,
      },
    ],
  },
  "lengthToDraw": -1,
  "move": Object {
    "bounds": TransformBounds {
      "boundary": Array [
        null,
        null,
        null,
      ],
      "bounds": "inside",
      "order": Array [
        "s",
        "r",
        "t",
      ],
      "precision": 8,
    },
    "canBeMovedAfterLosingTouch": true,
    "element": null,
    "freely": Object {
      "bounceLoss": 0.5,
      "callback": null,
      "deceleration": 5,
      "zeroVelocityThreshold": 0.0001,
    },
    "maxVelocity": 5,
    "sizeInBounds": false,
    "transformClip": null,
    "type": "translation",
  },
  "name": "definition-points",
  "onAdd": null,
  "onClick": [Function],
  "opacity": 1,
  "parent": null,
  "parentTransform": Transform {
    "_type": "transform",
    "index": 0,
    "mat": Array [
      1,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      1,
    ],
    "name": "",
    "order": Array [],
  },
  "pointsDefinition": Object {},
  "pointsToDraw": -1,
  "pulseDefault": Object {
    "angle": 0,
    "centerOn": "this",
    "done": null,
    "duration": 1,
    "frequency": 0,
    "num": 1,
    "progression": "sinusoid",
    "rotation": null,
    "scale": 2,
    "space": "figure",
    "translation": null,
    "when": "syncNow",
    "xAlign": "center",
    "yAlign": "middle",
  },
  "pulseSettings": Object {
    "A": 1,
    "B": 0.5,
    "C": 0,
    "allowFreezeOnStop": false,
    "callback": [Function],
    "delta": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
    },
    "frequency": 0.5,
    "num": 1,
    "progression": "tools.math.sinusoid",
    "time": 1,
    "transformMethod": "_elementPulseSettingsTransformMethod",
    "type": "scale",
  },
  "pulseTransforms": Array [],
  "recorder": null,
  "renderedOnNextDraw": false,
  "scenarios": Object {},
  "setPointsFromDefinition": null,
  "setTransformCallback": null,
  "state": Object {
    "isBeingMoved": false,
    "isMovingFreely": false,
    "isPulsing": false,
    "movement": Object {
      "previousTime": null,
      "previousTransform": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          1,
          0,
          -3,
          0,
          1,
          3.5,
          0,
          0,
          1,
        ],
        "name": "line",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "line",
            "x": 1,
            "y": 1,
          },
          Rotation {
            "name": "line",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "line",
            "x": -3,
            "y": 3.5,
          },
        ],
      },
      "velocity": Transform {
        "_type": "transform",
        "index": 3,
        "mat": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
        ],
        "name": "line",
        "order": Array [
          Scale {
            "_type": "point",
            "name": "line",
            "x": 0,
            "y": 0,
          },
          Rotation {
            "name": "line",
            "r": 0,
          },
          Translation {
            "_type": "point",
            "name": "line",
            "x": 0,
            "y": 0,
          },
        ],
      },
    },
    "preparingToStop": false,
    "pulse": Object {
      "startTime": null,
    },
  },
  "stateProperties": Array [],
  "subscriptions": SubscriptionManager {
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": Object {},
      },
      "map": Object {
        "_elementPulseSettingsTransformMethod": Object {
          "fn": [Function],
        },
        "tools.math.easeinout": Object {
          "fn": [Function],
        },
        "tools.math.linear": Object {
          "fn": [Function],
        },
        "tools.math.sinusoid": Object {
          "fn": [Function],
        },
        "tools.math.sinusoidAbs": Object {
          "fn": [Function],
        },
        "tools.math.triangle": Object {
          "fn": [Function],
        },
      },
    },
    "subscriptions": Object {},
  },
  "tieToHTML": Object {
    "element": null,
    "scale": "fit",
    "updateOnResize": true,
    "window": Rect {
      "bottom": -1,
      "height": 2,
      "left": -1,
      "right": 1,
      "top": 1,
      "width": 2,
    },
  },
  "touchBorder": "buffer",
  "transform": Transform {
    "_type": "transform",
    "index": 3,
    "mat": Array [
      1,
      0,
      -3,
      0,
      1,
      3.5,
      0,
      0,
      1,
    ],
    "name": "line",
    "order": Array [
      Scale {
        "_type": "point",
        "name": "line",
        "x": 1,
        "y": 1,
      },
      Rotation {
        "name": "line",
        "r": 0,
      },
      Translation {
        "_type": "point",
        "name": "line",
        "x": -3,
        "y": 3.5,
      },
    ],
  },
  "type": "primitive",
  "uid": "",
  "unrenderNextDraw": false,
}
`;
